<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".group_share">


    <TextView
        android:id="@+id/appnametxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sendandreceive"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appnametxt">

        <ImageButton
            android:id="@+id/creategroupbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:scaleType="fitXY"
            android:contentDescription="@string/send_button_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/joingroupbtn"
            app:layout_constraintHorizontal_bias="0.746"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.38"
            app:srcCompat="@drawable/creategroupbtn" />

        <TextView
            android:id="@+id/creategrouptxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/creategroup"
            android:textAlignment="center"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/creategroupbtn"
            app:layout_constraintStart_toStartOf="@+id/creategroupbtn"
            app:layout_constraintTop_toBottomOf="@+id/creategroupbtn"
            app:layout_constraintVertical_bias="0.49" />

        <ImageButton
            android:id="@+id/joingroupbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/download_button_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/creategroupbtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.38"
            app:srcCompat="@drawable/joingroupbtn" />

        <TextView
            android:id="@+id/joingrouptxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/joingroup"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/joingroupbtn"
            app:layout_constraintStart_toStartOf="@+id/joingroupbtn"
            app:layout_constraintTop_toBottomOf="@+id/joingroupbtn"
            app:layout_constraintVertical_bias="0.509" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sendandreceive"
        app:layout_constraintTop_toBottomOf="@+id/sendandreceive"
        app:layout_constraintVertical_bias="0.0">


        <ImageButton
            android:id="@+id/qrcodebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="84dp"
            android:background="@null"
            android:contentDescription="@string/qrcode_button_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/helpbtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/qrcodebtn" />

        <ImageButton
            android:id="@+id/scanqrcodebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:background="@null"
            android:contentDescription="@string/scanqrcode_button_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/qrcodebtn"
            app:layout_constraintHorizontal_bias="0.174"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/scanqrcodebtn" />

        <ImageButton
            android:id="@+id/helpbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="68dp"
            android:background="@null"
            android:contentDescription="@string/help_button_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/helpbtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="#F1F2F6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/individualbtnicon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <ImageButton
                        android:id="@+id/individualbtnimg"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:padding="0dp"
                        android:background="@null"
                        android:paddingTop="5dp"
                        android:contentDescription="@string/individual_button_description"
                        app:srcCompat="@drawable/individual_btn" />

                    <TextView
                        android:id="@+id/individualbtnname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/individualbtnname"
                        android:textAlignment="center"
                        android:textSize="20sp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/groupbtnicon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/groupbtnimg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="0dp"
                        android:background="@null"
                        android:paddingTop="5dp"
                        android:contentDescription="@string/group_button_description"
                        app:srcCompat="@drawable/group_btn" />

                    <TextView
                        android:id="@+id/groupbtnname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/groupbtnname"
                        android:textAlignment="center"
                        android:textSize="20sp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/filesbtnicon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/filesbtnimg"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:padding="0dp"
                        android:background="@null"
                        android:paddingTop="5dp"
                        android:contentDescription="@string/files_button_description"
                        app:srcCompat="@drawable/file_btn" />

                    <TextView
                        android:id="@+id/filesbtnname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/filebtnname"
                        android:textAlignment="center"
                        android:textSize="20sp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/accountbtnicon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <ImageButton
                        android:id="@+id/accountbtnimg"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:padding="0dp"
                        android:background="@null"
                        android:paddingTop="5dp"
                        android:contentDescription="@string/account_button_description"
                        app:srcCompat="@drawable/account_btn" />

                    <TextView
                        android:id="@+id/accountbtnname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/accountbtnname"
                        android:textAlignment="center"
                        android:textSize="20sp" />


                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.bottomappbar.BottomAppBar>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>