<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/main"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".account">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="#F1F2F6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/individualbtnicon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <ImageButton
                        android:id="@+id/individualbtnimg"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:contentDescription="@string/individual_button_description"
                        android:padding="0dp"
                        android:paddingTop="5dp"
                        app:srcCompat="@drawable/individual_btn" />

                    <TextView
                        android:id="@+id/individualbtnname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/individualbtnname"
                        android:textAlignment="center"
                        android:textSize="20sp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/groupbtnicon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/groupbtnimg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:contentDescription="@string/group_button_description"
                        android:padding="0dp"
                        android:paddingTop="5dp"
                        app:srcCompat="@drawable/group_btn" />

                    <TextView
                        android:id="@+id/groupbtnname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/groupbtnname"
                        android:textAlignment="center"
                        android:textSize="20sp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/filesbtnicon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/filesbtnimg"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:contentDescription="@string/files_button_description"
                        android:padding="0dp"
                        android:paddingTop="5dp"
                        app:srcCompat="@drawable/file_btn" />

                    <TextView
                        android:id="@+id/filesbtnname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/filebtnname"
                        android:textAlignment="center"
                        android:textSize="20sp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/accountbtnicon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <ImageButton
                        android:id="@+id/accountbtnimg"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:contentDescription="@string/account_button_description"
                        android:padding="0dp"
                        android:paddingTop="5dp"
                        app:srcCompat="@drawable/account_btn" />

                    <TextView
                        android:id="@+id/accountbtnname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/accountbtnname"
                        android:textAlignment="center"
                        android:textSize="20sp" />


                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.bottomappbar.BottomAppBar>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>