<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup">


    <TextView
        android:id="@+id/signup_welcometxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/signup_createaccount"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signup_username"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/login_editbox"
        android:drawableLeft="@drawable/baseline_person_24"
        android:hint="@string/login_username"
        android:padding="10dp"
        android:paddingEnd="170dp"
        android:textColor="#b5c6e0"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_welcometxt" />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/login_editbox"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="5dp"
        android:hint="@string/signup_email"
        android:padding="10dp"
        android:paddingEnd="220dp"
        android:textColor="#b5c6e0"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_username" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/login_editbox"
        android:drawablePadding="5dp"
        android:drawableLeft="@drawable/baseline_password_24"
        android:hint="@string/login_password"
        android:padding="10dp"
        android:paddingEnd="170dp"
        android:textColor="#b5c6e0"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_email" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerbtn">

        <View
            android:layout_width="68dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="#b5c6e0" />

        <TextView
            android:id="@+id/orsigninwith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingHorizontal="10dp"
            android:text="@string/orsignupwith"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/registerbtn"
            app:layout_constraintStart_toStartOf="@+id/registerbtn"
            app:layout_constraintTop_toBottomOf="@+id/registerbtn" />

        <View
            android:layout_width="68dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="#b5c6e0" />
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/doyouhaveanaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:text="@string/doyouhaveanaccount"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.428" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="116dp"
            android:clickable="true"
            android:minWidth="48dp"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/login"
            android:textColor="#40c9ff"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/doyouhaveanaccount"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/registerbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:backgroundTint="#40c9ff"
        android:gravity="center"
        android:paddingHorizontal="120dp"
        android:paddingVertical="10dp"
        android:text="@string/register"
        android:textColor="#ffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_password" />

    <Button
        android:id="@+id/googlesignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#5185ed"
        android:drawableLeft="@drawable/google_icon"
        android:gravity="center"
        android:paddingHorizontal="35dp"
        android:paddingVertical="10dp"
        android:text="@string/continuewithgoogle"
        android:textColor="#ffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>